Overflow bug fixed?

--- a/src/components/ExperiencePage/Experience.scss
+++ b/src/components/ExperiencePage/Experience.scss
@@ -34,7 +34,7 @@
     // }
     .experience-object-containers {
         border-radius: 0.75em;
-        overflow: hidden;
+        // overflow: hidden;
     }
 
     #experience-header-container {
